# minerreviewer

./: .gitignore  CLAUDE.md  Problems.md  README.md  batch.sh  minerreviewer_modification_spec.md  pyproject.toml  test.json  todo.md
configs/: iclr.example.yaml  iclr.yaml
docs/: ARCHITECTURE.md  deepreview_memory.md
scripts/: add_primary_area_to_crosseval.py  batch_test.py  build_deepreview_memory.py  build_full_memory.py  build_memory_from_merged.py  build_memory_v2.py  build_multi_venue_memory.py  build_reviewer2_memory.py  compare_criteria_by_area.py  coverage_test.py  cross_venue_test.py  detailed_review_test.py  eval_simplified.py  fetch_primary_areas.py  fetch_primary_areas_api.py  fetch_primary_areas_selenium.py  rebuild_cases.py  retry_crosseval_failures.py  run_pipeline_trace.py  test_deepreview_iclr.py  test_deepreview_memory.py  test_parser_v2.py  test_parser_v3.py  train_memory.py  train_simplified_parallel.py
src/: main.py
src/agents/: arbiter_agent.py  base.py  theme_agent.py
src/clients/: embedding_client.py  llm_client.py  openreview_client.py
src/common/: logging.py  types.py  utils.py
src/eval/: coverage.py  ground_truth_eval.py  metrics.py  run_eval.py  run_gt_eval.py  run_json_eval.py
src/pipeline/: agent_memory_allocator.py  aggregate.py  build_cases.py  calibrate.py  check_score_consistency.py  distill_criteria.py  distill_experience.py  learn_from_comparison.py  memory_editor.py  mine_criteria.py  retrieve.py  (+8 more)
tests/: test_distill.py  test_leakage_filter.py  test_memory_driven_reviewer.py  test_memory_store.py  test_vector_memory.py
(+13 files in other folders)
